# social_media_marketing

./: README.md  pyproject.toml  setupNotes.txt
src/: main.py  privacy_policy.html
src/Notebooks/: instagram_api_experiments.ipynb
src/codeFiles/: openAI_helper.py  response_handler.py
src/utils/: config.py
tests/: test_local.py
