[tool.poetry]
name = "social-media-marketing"
version = "0.1.0"
description = ""
authors = ["Ethan <elavis00@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^6.29.5"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
pytest = "^8.3.4"
ngrok = "^1.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
